--- a/CAP.Yencon/CAP.Yencon.csproj
+++ b/CAP.Yencon/CAP.Yencon.csproj
@@ -11,4 +11,20 @@
 		<Version>0.0.0.0</Version>
 		<InformationalVersion>alpha00a0</InformationalVersion>
 	</PropertyGroup>
+	<ItemGroup>
+	  <Folder Include="Yencon\Text\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
+	</ItemGroup>
 </Project>
