--- a/CAP.YenconTests/CAP.YenconTests.csproj
+++ b/CAP.YenconTests/CAP.YenconTests.csproj
@@ -11,6 +11,6 @@
 		<PackageReference Include="coverlet.collector" Version="1.2.0" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\CAP.Yencon\CAP.Yencon.csproj" />
+		<ProjectReference Include="../CAP.Yencon/CAP.Yencon.csproj" />
 	</ItemGroup>
 </Project>
