--- a/ExrecodelTests/ExrecodelTests.csproj
+++ b/ExrecodelTests/ExrecodelTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
 		<IsPackable>false</IsPackable>
@@ -11,7 +11,6 @@
 		<PackageReference Include="coverlet.collector" Version="1.2.0" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="../CAP.Yencon/CAP.Yencon.csproj" />
-		<ProjectReference Include="../TakymLibTests/TakymLibTests.csproj" />
+		<ProjectReference Include="../Exrecodel/Exrecodel.csproj" />
 	</ItemGroup>
 </Project>
