プロジェクトのバージョン統一

--- a/CommonProjectSettings.targets
+++ b/CommonProjectSettings.targets
@@ -21,7 +21,7 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
 		<PackageIcon>Logo.png</PackageIcon>
-		<PackageLicenseFile>License.md</PackageLicenseFile>
+		<PackageLicenseFile>LICENSE.md</PackageLicenseFile>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 		<EnableDefaultContentItems>false</EnableDefaultContentItems>
 	</PropertyGroup>
