--- a/DnetLibrary.ProjectSettings.targets
+++ b/DnetLibrary.ProjectSettings.targets
@@ -12,9 +12,11 @@
 	<PropertyGroup>
 		<Authors>Takym</Authors>
 		<Copyright>Copyright (C) 2020 Yigty.ORG; all rights reserved. Copyright (C) 2020 Takym.</Copyright>
+		<Version>0.0.0.0</Version>
+		<InformationalVersion>alpha00a0</InformationalVersion>
 	</PropertyGroup>
 	<ItemGroup>
-		<Content Include="..\LICENSE.md" Pack="true" PackagePath="/">
+		<Content Include="../LICENSE.md" Pack="true" PackagePath="/">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 			<Visible>false</Visible>
 		</Content>
