--- a/TakymLibTests/TakymLibTests.csproj
+++ b/TakymLibTests/TakymLibTests.csproj
@@ -3,6 +3,7 @@
 		<TargetFramework>net5.0</TargetFramework>
 		<IsPackable>false</IsPackable>
 		<Nullable>enable</Nullable>
+		<RootNamespace>TakymLib.Tests</RootNamespace>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
