--- a/DnetLibrary.ProjectSettings.targets
+++ b/DnetLibrary.ProjectSettings.targets
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <!DOCTYPE Project>
 <!--*
- * .NET Library for Yigty.ORG
+ * DnetLibrary for Yigty.ORG
  * Copyright (C) 2020 Yigty.ORG; all rights reserved.
  * Copyright (C) 2020 Takym.
  *
