著作権表記の年号更新

--- a/DnetLibrary.ProjectSettings.targets
+++ b/DnetLibrary.ProjectSettings.targets
@@ -2,8 +2,8 @@
 <!DOCTYPE Project>
 <!--*
  * DnetLibrary for Yigty.ORG
- * Copyright (C) 2020 Yigty.ORG; all rights reserved.
- * Copyright (C) 2020 Takym.
+ * Copyright (C) 2020-2021 Yigty.ORG; all rights reserved.
+ * Copyright (C) 2020-2021 Takym.
  *
  * distributed under the MIT License.
 **-->
@@ -11,7 +11,7 @@
 	<Import Project="CommonProjectSettings.targets" />
 	<PropertyGroup>
 		<Authors>Takym</Authors>
-		<Copyright>Copyright (C) 2020 Yigty.ORG; all rights reserved. Copyright (C) 2020 Takym.</Copyright>
+		<Copyright>Copyright (C) 2020-2021 Yigty.ORG; all rights reserved. Copyright (C) 2020-2021 Takym.</Copyright>
 		<Version>0.0.0.0</Version>
 		<InformationalVersion>alpha00a0</InformationalVersion>
 	</PropertyGroup>
