--- a/CommonProjectSettings.targets
+++ b/CommonProjectSettings.targets
@@ -2,8 +2,8 @@
 <!DOCTYPE Project>
 <!--*
  * DnetLibrary for Yigty.ORG
- * Copyright (C) 2020 Yigty.ORG; all rights reserved.
- * Copyright (C) 2020 Takym.
+ * Copyright (C) 2020-2021 Yigty.ORG; all rights reserved.
+ * Copyright (C) 2020-2021 Takym.
  *
  * distributed under the MIT License.
 **-->
