--- a/TakymLib.ProjectSettings.targets
+++ b/TakymLib.ProjectSettings.targets
@@ -10,6 +10,7 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<Import Project="CommonProjectSettings.targets" />
 	<PropertyGroup>
+		<Product>TakymLib</Product>
 		<Authors>Takym</Authors>
 		<Copyright>Copyright (C) 2020-2021 Yigty.ORG; all rights reserved. Copyright (C) 2020-2021 Takym.</Copyright>
 		<Version>0.0.0.0</Version>
