厳密な名前でアセンブリを署名

--- a/TakymLib.ProjectSettings.targets
+++ b/TakymLib.ProjectSettings.targets
@@ -16,6 +16,10 @@
 		<Version>0.0.0.0</Version>
 		<InformationalVersion>alpha00a0</InformationalVersion>
 	</PropertyGroup>
+	<PropertyGroup Condition="Exists('../TakymLib.StrongNameKey.snk')">
+		<SignAssembly>true</SignAssembly>
+		<AssemblyOriginatorKeyFile>TakymLib.StrongNameKey.snk</AssemblyOriginatorKeyFile>
+	</PropertyGroup>
 	<ItemGroup>
 		<Content Include="../LICENSE.md" Pack="true" PackagePath="/">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
