--- a/TakymLib.Core.Framework/TakymLib.Core.Framework.csproj
+++ b/TakymLib.Core.Framework/TakymLib.Core.Framework.csproj
@@ -13,15 +13,10 @@
 	</PropertyGroup>
 	<Import Project="../TakymLib.ProjectSettings.targets" />
 	<PropertyGroup>
-		<Product>TakymLib.Framework</Product>
+		<Product>TakymLib.Core.Framework</Product>
 		<Description>The common core framework library.</Description>
 	</PropertyGroup>
 	<ItemGroup>
-		<ProjectReference Include="../TakymLib/TakymLib.csproj" />
-		<ProjectReference Include="../TakymLib.CommandLine/TakymLib.CommandLine.csproj" />
-		<ProjectReference Include="../TakymLib.Logging/TakymLib.Logging.csproj" />
-		<ProjectReference Include="../TakymLib.Security/TakymLib.Security.csproj" />
-		<ProjectReference Include="../TakymLib.Threading.Distributed/TakymLib.Threading.Distributed.csproj" />
-		<ProjectReference Include="../TakymLib.Threading.Tasks/TakymLib.Threading.Tasks.csproj" />
+		<ProjectReference Include="../TakymLib.Core/TakymLib.Core.csproj" />
 	</ItemGroup>
 </Project>
