--- a/TakymLibTests/TakymLibTests.csproj
+++ b/TakymLibTests/TakymLibTests.csproj
@@ -24,9 +24,12 @@
 	<ItemGroup>
 		<ProjectReference Include="../TakymLib/TakymLib.csproj" />
 		<ProjectReference Include="../TakymLib.CommandLine/TakymLib.CommandLine.csproj" />
+		<ProjectReference Include="../TakymLib.Core/TakymLib.Core.csproj" />
+		<ProjectReference Include="../TakymLib.Core.Framework/TakymLib.Core.Framework.csproj" />
 		<ProjectReference Include="../TakymLib.Logging/TakymLib.Logging.csproj" />
 		<ProjectReference Include="../TakymLib.Security/TakymLib.Security.csproj" />
 		<ProjectReference Include="../TakymLib.Threading.Distributed/TakymLib.Threading.Distributed.csproj" />
+		<ProjectReference Include="../TakymLib.Threading.Tasks/TakymLib.Threading.Tasks.csproj" />
 		<EmbeddedResource Update="Properties/Resources.resx">
 			<Generator>ResXFileCodeGenerator</Generator>
 			<LastGenOutput>Resources.Designer.cs</LastGenOutput>
