--- a/TakymLib.ProjectSettings.targets
+++ b/TakymLib.ProjectSettings.targets
@@ -16,9 +16,9 @@
 		<Version>0.0.0.0</Version>
 		<InformationalVersion>alpha00a0</InformationalVersion>
 	</PropertyGroup>
-	<PropertyGroup Condition="Exists('../TakymLib.StrongNameKey.snk')">
+	<PropertyGroup Condition="Exists('$(SolutionDir)/TakymLib.StrongNameKey.snk')">
 		<SignAssembly>true</SignAssembly>
-		<AssemblyOriginatorKeyFile>TakymLib.StrongNameKey.snk</AssemblyOriginatorKeyFile>
+		<AssemblyOriginatorKeyFile>$(SolutionDir)/TakymLib.StrongNameKey.snk</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
 	<ItemGroup>
 		<Content Include="../LICENSE.md" Pack="true" PackagePath="/">
