--- a/docs/docs.csproj
+++ b/docs/docs.csproj
@@ -8,6 +8,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
+		<IsWindows>$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Windows)))</IsWindows>
+		<IsLinux>$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))</IsLinux>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="docfx.console" Version="2.56.6">
@@ -19,7 +21,10 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 	</ItemGroup>
-	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+	<Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition="$(IsWindows)">
 		<Exec Command="restore.cmd" />
+	</Target>
+	<Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition="$(IsLinux)">
+		<Exec Command="./restore.sh" />
 	</Target>
 </Project>
