--- a/TakymLib/TakymLib.csproj
+++ b/TakymLib/TakymLib.csproj
@@ -16,4 +16,9 @@
 		<Product>TakymLib</Product>
 		<Description>The common library.</Description>
 	</PropertyGroup>
+	<ItemGroup>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	  </Compile>
+	</ItemGroup>
 </Project>
