--- a/TakymLib.Core/TakymLib.Core.csproj
+++ b/TakymLib.Core/TakymLib.Core.csproj
@@ -21,6 +21,7 @@
 		<ProjectReference Include="../TakymLib.CommandLine/TakymLib.CommandLine.csproj" />
 		<ProjectReference Include="../TakymLib.Logging/TakymLib.Logging.csproj" />
 		<ProjectReference Include="../TakymLib.Security/TakymLib.Security.csproj" />
+		<ProjectReference Include="../TakymLib.Text/TakymLib.Text.csproj" />
 		<ProjectReference Include="../TakymLib.Threading.Distributed/TakymLib.Threading.Distributed.csproj" />
 		<ProjectReference Include="../TakymLib.Threading.Tasks/TakymLib.Threading.Tasks.csproj" />
 	</ItemGroup>
