--- a/TakymLib.ProjectSettings.targets
+++ b/TakymLib.ProjectSettings.targets
@@ -10,6 +10,10 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<Import Project="CommonProjectSettings.targets" />
 	<PropertyGroup>
+		<TargetFramework><!-- TargetFramework の再設定 --></TargetFramework>
+		<TargetFrameworks>net5.0;netcoreapp3.1;netstandard2.1;net48</TargetFrameworks>
+	</PropertyGroup>
+	<PropertyGroup Label="Version">
 		<Product>TakymLib</Product>
 		<Authors>Takym</Authors>
 		<Copyright>Copyright (C) 2020-2021 Yigty.ORG; all rights reserved. Copyright (C) 2020-2021 Takym.</Copyright>
@@ -21,6 +25,8 @@
 		<AssemblyOriginatorKeyFile>$(SolutionDir)/TakymLib.StrongNameKey.snk</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="System.Memory" Version="4.5.4" />
+		<PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
 		<Content Include="../LICENSE.md" Pack="true" PackagePath="/">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
