--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -23,7 +23,7 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     strategy:
       fail-fast: false
@@ -54,10 +54,22 @@ jobs:
         dotnet-version: 5.0.101
     - name: Restore dependencies
       run: dotnet restore TakymLib.sln
-    - name: Build (Debug)
-      run: dotnet build --configuration Debug --no-restore
-    - name: Build (Release)
-      run: dotnet build --configuration Release --no-restore
+    - name: Build .NET 5 (Debug)
+      run: dotnet build -f net5.0 -c Debug --no-restore
+    - name: Build .NET 5 (Release)
+      run: dotnet build -f net5.0 -c Release --no-restore
+    - name: Build .NET Core 3.1 (Debug)
+      run: dotnet build -f netcoreapp3.1 -c Debug --no-restore
+    - name: Build .NET Core 3.1 (Release)
+      run: dotnet build -f netcoreapp3.1 -c Release --no-restore
+    - name: Build .NET Standard 2.1 (Debug)
+      run: dotnet build -f netstandard2.1 -c Debug --no-restore
+    - name: Build .NET Standard 2.1 (Release)
+      run: dotnet build -f netstandard2.1 -c Release --no-restore
+    - name: Build .NET Framework 4.8 (Debug)
+      run: dotnet build -f net48 -c Debug --no-restore
+    - name: Build .NET Framework 4.8 (Release)
+      run: dotnet build -f net48 -c Release --no-restore
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
