--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -17,17 +17,24 @@ jobs:
         dotnet-version: 5.0.201
     - name: Restore dependencies
       run: dotnet restore TakymLib.sln
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
+    # Build
+    - name: Build (.NET 5.0)
+      run: dotnet build -c Release --no-restore -f net5.0
+    - name: Build (.NET Core 3.1)
+      run: dotnet build -c Release --no-restore -f netcoreapp3.1
+    - name: Build (.NET Standard 2.1)
+      run: dotnet build -c Release --no-restore -f netstandard2.1
+    - name: Build (.NET Framework 4.8)
+      run: dotnet build -c Release --no-restore -f net48
     # Test
     - name: Test (.NET 5.0)
-      run: dotnet test -c Debug --no-build --verbosity normal -f net5.0
+      run: dotnet test -c Release --no-build --verbosity normal -f net5.0
     - name: Test (.NET Core 3.1)
-      run: dotnet test -c Debug --no-build --verbosity normal -f netcoreapp3.1
+      run: dotnet test -c Release --no-build --verbosity normal -f netcoreapp3.1
     - name: Test (.NET Standard 2.1)
-      run: dotnet test -c Debug --no-build --verbosity normal -f netstandard2.1
+      run: dotnet test -c Release --no-build --verbosity normal -f netstandard2.1
     - name: Test (.NET Framework 4.8)
-      run: dotnet test -c Debug --no-build --verbosity normal -f net48
+      run: dotnet test -c Release --no-build --verbosity normal -f net48
   Ubuntu:
     runs-on: ubuntu-latest
     steps:
@@ -38,14 +45,21 @@ jobs:
         dotnet-version: 5.0.201
     - name: Restore dependencies
       run: dotnet restore TakymLib.sln
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
+    # Build
+    - name: Build (.NET 5.0)
+      run: dotnet build -c Release --no-restore -f net5.0
+    - name: Build (.NET Core 3.1)
+      run: dotnet build -c Release --no-restore -f netcoreapp3.1
+    - name: Build (.NET Standard 2.1)
+      run: dotnet build -c Release --no-restore -f netstandard2.1
+    - name: Build (.NET Framework 4.8)
+      run: dotnet build -c Release --no-restore -f net48
     # Test
     - name: Test (.NET 5.0)
-      run: dotnet test -c Debug --no-build --verbosity normal -f net5.0
+      run: dotnet test -c Release --no-build --verbosity normal -f net5.0
     - name: Test (.NET Core 3.1)
-      run: dotnet test -c Debug --no-build --verbosity normal -f netcoreapp3.1
+      run: dotnet test -c Release --no-build --verbosity normal -f netcoreapp3.1
     - name: Test (.NET Standard 2.1)
-      run: dotnet test -c Debug --no-build --verbosity normal -f netstandard2.1
+      run: dotnet test -c Release --no-build --verbosity normal -f netstandard2.1
     - name: Test (.NET Framework 4.8)
-      run: dotnet test -c Debug --no-build --verbosity normal -f net48
+      run: dotnet test -c Release --no-build --verbosity normal -f net48
