--- a/.gitattributes
+++ b/.gitattributes
@@ -1,27 +1,20 @@
-###############################################################################
-# Set default behavior to automatically normalize line endings.
-###############################################################################
-* text=auto
 
-###############################################################################
-# Set default behavior for command prompt diff.
-#
-# This is need for earlier builds of msysgit that does not have it on by
-# default for csharp files.
-# Note: This is only used by command line
-###############################################################################
-*.cs     diff=csharp
+# 全てのファイル
+* text=auto eol=crlf encoding=utf-8
 
-###############################################################################
-# Set the merge driver for project and solution files
-#
-# Merging from the command prompt will add diff markers to the files if there
-# are conflicts (Merging from VS is not affected by the settings below, in VS
-# the diff markers are never inserted). Diff markers may cause the following
-# file extensions to fail to load in VS. An alternative would be to treat
-# these files as binary and thus will always conflict and require user
-# intervention with every merge. To do so, just uncomment the entries below
-###############################################################################
+# 特定のファイル
+*.cs      text diff=csharp
+*.cmd     text
+*.sh      text eol=lf
+*.html    text diff=html
+*.md      text diff=markdown
+*.js      text
+*.json    text
+*.css     text diff=css
+*.yml     text
+*.ttf     binary -text -eol -encoding -diff
+
+# プロジェクトファイル
 *.sln       merge=binary
 *.csproj    merge=binary
 *.vbproj    merge=binary
@@ -35,22 +28,13 @@
 *.sqlproj   merge=binary
 *.wwaproj   merge=binary
 
-###############################################################################
-# behavior for image files
-#
-# image files are treated as binary by default.
-###############################################################################
-*.jpg   binary
-*.png   binary
-*.gif   binary
+# 画像ファイル
+*.bmp    binary -text -eol -encoding -diff
+*.png    binary -text -eol -encoding -diff
+*.jpg    binary -text -eol -encoding -diff
+*.gif    binary -text -eol -encoding -diff
 
-###############################################################################
-# diff behavior for common document formats
-#
-# Convert binary document formats to text before diffing them. This feature
-# is only available from the command line. Turn it on by uncommenting the
-# entries below.
-###############################################################################
+# 文書ファイル
 *.doc   diff=astextplain
 *.DOC   diff=astextplain
 *.docx  diff=astextplain
