--- a/.github/PULL_REQUEST_TEMPLATE/config.yml
+++ b/.github/PULL_REQUEST_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
   - name: How to Contribute
-    url: https://github.com/YigtyORG/Ywando/blob/master/CONTRIBUTING.md
-    about: Please check this page before you submit a PR.
+    url: https://github.com/YigtyORG/Ywando/blob/master/CONTRIBUTING.md#en
+    about: Please check this page before you submit an issue.
   - name: 貢献方法
-    url: https://github.com/YigtyORG/Ywando/blob/master/CONTRIBUTING.md
-    about: PR を作成する前に確認してください。
+    url: https://github.com/YigtyORG/Ywando/blob/master/CONTRIBUTING.md#ja
+    about: Issue を作成する前に確認してください。
