--- a/Ywando/Ywando.csproj
+++ b/Ywando/Ywando.csproj
@@ -1,1 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk"/>
+<Project Sdk="Microsoft.NET.Sdk">
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+    </Compile>
+  </ItemGroup>
+</Project>
