--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ windows-latest, windows-2019, ubuntu-latest, ubuntu-20.04, ubuntu-18.04, ubuntu-16.04, macos-latest, macos-10.15 ]
+        os: [ windows-latest, ubuntu-latest, macos-latest ]
         config: [ Debug, Release ]
     steps:
     - uses: actions/checkout@v2
