--- a/TakymLib.ProjectSettings.targets
+++ b/TakymLib.ProjectSettings.targets
@@ -17,7 +17,7 @@
 		<Product>TakymLib</Product>
 		<Authors>Takym</Authors>
 		<Copyright>Copyright (C) 2020-2021 Yigty.ORG; all rights reserved. Copyright (C) 2020-2021 Takym.</Copyright>
-		<Version>0.0.0.0</Version>
+		<VersionPrefix>0.0.0.0</VersionPrefix>
 		<InformationalVersion>alpha00a0</InformationalVersion>
 	</PropertyGroup>
 	<PropertyGroup Condition="Exists('$(SolutionDir)/TakymLib.StrongNameKey.snk')">
