--- a/.github/workflows/NuGet.yml
+++ b/.github/workflows/NuGet.yml
@@ -22,7 +22,7 @@ jobs:
       uses: NuGet/setup-nuget@v1.0.2
       with:
         nuget-api-key: ${{ secrets.NUGET_API_KEY }}
-        nuget-version: latest
+        nuget-version: 5.3.1
     - name: Restore dependencies
       run: dotnet restore TakymLib.sln
     - name: Build
