--- a/TakymLib.CommandLine/TakymLib.CommandLine.csproj
+++ b/TakymLib.CommandLine/TakymLib.CommandLine.csproj
@@ -1,4 +1,4 @@
-﻿<!--*
+<!--*
  * TakymLib
  * Copyright (C) 2020-2021 Yigty.ORG; all rights reserved.
  * Copyright (C) 2020-2021 Takym.
@@ -15,6 +15,7 @@
 	<PropertyGroup>
 		<Product>TakymLib.CommandLine</Product>
 		<Description>The common command-line arguments parser library.</Description>
+		<PackageTags>$(PackageTags), Command-line</PackageTags>
 	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="../TakymLib/TakymLib.csproj" />
