--- a/TakymLib.Security/TakymLib.Security.csproj
+++ b/TakymLib.Security/TakymLib.Security.csproj
@@ -1,4 +1,4 @@
-﻿<!--*
+<!--*
  * TakymLib
  * Copyright (C) 2020-2021 Yigty.ORG; all rights reserved.
  * Copyright (C) 2020-2021 Takym.
@@ -14,7 +14,8 @@
 	<Import Project="../TakymLib.ProjectSettings.targets" />
 	<PropertyGroup>
 		<Product>TakymLib.Security</Product>
-		<Description>The common secutiy library.</Description>
+		<Description>The common security library.</Description>
+		<PackageTags>$(PackageTags), Security</PackageTags>
 	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="../TakymLib/TakymLib.csproj" />
