--- a/TakymLib.Text/TakymLib.Text.csproj
+++ b/TakymLib.Text/TakymLib.Text.csproj
@@ -1,4 +1,4 @@
-﻿<!--*
+<!--*
  * TakymLib
  * Copyright (C) 2020-2021 Yigty.ORG; all rights reserved.
  * Copyright (C) 2020-2021 Takym.
@@ -15,6 +15,7 @@
 	<PropertyGroup>
 		<Product>TakymLib</Product>
 		<Description>The common text library.</Description>
+		<PackageTags>$(PackageTags), Text, String, Unicode, East Asian Width</PackageTags>
 	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="../TakymLib/TakymLib.csproj" />
