--- a/.github/workflows/CodeQL.yml
+++ b/.github/workflows/CodeQL.yml
@@ -29,6 +29,7 @@ jobs:
       fail-fast: false
       matrix:
         config: [ Debug, Release ]
+        runtime: [ 'net5.0', 'netcoreapp3.1', 'netstandard2.1', 'net48' ]
         language: [ 'csharp' ]
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python' ]
         # Learn more:
@@ -56,7 +57,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore TakymLib.sln
     - name: Build
-      run: dotnet build -c ${{ matrix.config }} --no-restore
+      run: dotnet build -c ${{ matrix.config }} -f ${{ matrix.runtime }} --no-restore
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
@@ -77,4 +78,4 @@ jobs:
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
       with:
-        ram: 16384
+        ram: 8192
