--- a/.github/workflows/CodeQL.yml
+++ b/.github/workflows/CodeQL.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     strategy:
       fail-fast: false
@@ -21,6 +21,18 @@ jobs:
         language: [ 'csharp' ]
 
     steps:
+
+    #####################################################################
+    # This step resolves #6.                                           ##
+    # Reference: https://github.com/github/codeql-action/issues/245    ##
+    - name: Configure page file                                        ##
+      uses: al-cheb/configure-pagefile-action@v1.2                     ##
+      with:                                                            ##
+        minimum-size:  8GB                                             ##
+        maximum-size: 32GB                                             ##
+        disk-root: "D:"                                                ##
+    #####################################################################
+
     - name: Checkout repository
       uses: actions/checkout@v2
 
