--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ windows-latest, ubuntu-latest, macos-latest ]
+        runtime: [ "net5.0", "netcoreapp3.1", "netstandard2.1", "net48" ]
         config: [ Debug, Release ]
     steps:
     - uses: actions/checkout@v2.3.4
@@ -23,7 +24,7 @@ jobs:
       run: dotnet restore TakymLib.sln
     # Build
     - name: Build
-      run: dotnet build -c ${{ matrix.config }} --no-restore
+      run: dotnet build -r ${{ matrix.runtime }} -c ${{ matrix.config }} --no-restore
     # Test
     - name: Test
-      run: dotnet test -c ${{ matrix.config }} --no-build --verbosity normal
+      run: dotnet test -r ${{ matrix.runtime }} -c ${{ matrix.config }} --no-build --verbosity normal
