--- a/TakymLibTests/TakymLibTests.csproj
+++ b/TakymLibTests/TakymLibTests.csproj
@@ -24,14 +24,7 @@
 		</PackageReference>
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="../TakymLib/TakymLib.csproj" />
-		<ProjectReference Include="../TakymLib.CommandLine/TakymLib.CommandLine.csproj" />
-		<ProjectReference Include="../TakymLib.Core/TakymLib.Core.csproj" />
-		<ProjectReference Include="../TakymLib.Core.Framework/TakymLib.Core.Framework.csproj" />
-		<ProjectReference Include="../TakymLib.Logging/TakymLib.Logging.csproj" />
-		<ProjectReference Include="../TakymLib.Security/TakymLib.Security.csproj" />
-		<ProjectReference Include="../TakymLib.Text/TakymLib.Text.csproj" />
-		<ProjectReference Include="../TakymLib.Threading.Distributed/TakymLib.Threading.Distributed.csproj" />
-		<ProjectReference Include="../TakymLib.Threading.Tasks/TakymLib.Threading.Tasks.csproj" />
+		<!-- ライブラリへの参照は下記のプロジェクトに追加する。 -->
+		<ProjectReference Include="../TakymLib.ConsoleApp/TakymLib.ConsoleApp.csproj" />
 	</ItemGroup>
 </Project>
