--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ windows-latest, ubuntu-latest, macos-latest ]
-        runtime: [ "net5.0", "netcoreapp3.1", "netstandard2.1", "net48" ]
+        runtime: [ "netcoreapp5.0", "netcoreapp3.1", "netstandard2.1", "net48" ]
         config: [ Debug, Release ]
     steps:
     - uses: actions/checkout@v2.3.4
