--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -12,8 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ windows-latest, ubuntu-latest, macos-latest ]
-        runtime: [ "netcoreapp5.0", "netcoreapp3.1", "netstandard2.1", "net48" ]
-        config: [ Debug, Release ]
+        bc: [ Debug, Release ]
     steps:
     - uses: actions/checkout@v2.3.4
     - name: Setup .NET
@@ -24,7 +23,7 @@ jobs:
       run: dotnet restore TakymLib.sln
     # Build
     - name: Build
-      run: dotnet build -r ${{ matrix.runtime }} -c ${{ matrix.config }} --no-restore
+      run: dotnet build -c ${{ matrix.bc }} --no-restore
     # Test
     - name: Test
-      run: dotnet test -r ${{ matrix.runtime }} -c ${{ matrix.config }} --no-build --verbosity normal
+      run: dotnet test -c ${{ matrix.bc }} --no-build --verbosity normal
