--- a/.github/workflows/CodeQL.yml
+++ b/.github/workflows/CodeQL.yml
@@ -5,8 +5,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  schedule:
-    - cron: '37 15 * * 2'
+  #schedule:
+  #  - cron: '37 15 * * 2'
 
 jobs:
   analyze:
