--- a/.github/workflows/CodeQL.yml
+++ b/.github/workflows/CodeQL.yml
@@ -17,7 +17,6 @@ jobs:
       fail-fast: false
       matrix:
         config: [ Debug, Release ]
-        runtime: [ 'net5.0', 'netcoreapp3.1', 'netstandard2.1', 'net48' ]
         language: [ 'csharp' ]
 
     steps:
@@ -38,7 +37,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore TakymLib.sln
     - name: Build
-      run: dotnet build -c ${{ matrix.config }} -f ${{ matrix.runtime }} --no-restore
+      run: dotnet build -c ${{ matrix.config }} --no-restore
 
     # Analyze
     - name: Perform CodeQL Analysis
