--- a/TakymLibTests/TakymLibTests.csproj
+++ b/TakymLibTests/TakymLibTests.csproj
@@ -13,6 +13,7 @@
 		<CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
 		<RootNamespace>TakymLibTests</RootNamespace>
 		<IsPackable>false</IsPackable>
+		<ServerGarbageCollection>true</ServerGarbageCollection>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
@@ -22,6 +23,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="BenchmarkDotNet" Version="0.13.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<!-- ライブラリへの参照は下記のプロジェクトに追加する。 -->
