--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -31,4 +31,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: benchmarks-results
-        path: "BenchmarkDotNet.Artifacts/results/*"
+        path: "**/BenchmarkDotNet.Artifacts/results/*"
