--- a/src/TakymLib.Aspect/TakymLib.Aspect.csproj
+++ b/src/TakymLib.Aspect/TakymLib.Aspect.csproj
@@ -11,7 +11,7 @@
 		<RootNamespace>TakymLib.Aspect</RootNamespace>
 		<OutputType>Library</OutputType>
 	</PropertyGroup>
-	<Import Project="../TakymLib.ProjectSettings.targets" />
+	<Import Project="../../TakymLib.ProjectSettings.targets" />
 	<PropertyGroup>
 		<Product>TakymLib</Product>
 		<Description>The common aspect-oriented programming library.</Description>
