--- a/src/TakymLib.CommandLine/TakymLib.CommandLine.csproj
+++ b/src/TakymLib.CommandLine/TakymLib.CommandLine.csproj
@@ -11,7 +11,7 @@
 		<RootNamespace>TakymLib.CommandLine</RootNamespace>
 		<OutputType>Library</OutputType>
 	</PropertyGroup>
-	<Import Project="../TakymLib.ProjectSettings.targets" />
+	<Import Project="../../TakymLib.ProjectSettings.targets" />
 	<PropertyGroup>
 		<Product>TakymLib.CommandLine</Product>
 		<Description>The common command-line arguments parser library.</Description>
