--- a/src/TakymLib.Core.Framework/TakymLib.Core.Framework.csproj
+++ b/src/TakymLib.Core.Framework/TakymLib.Core.Framework.csproj
@@ -11,7 +11,7 @@
 		<RootNamespace>TakymLib.Core.Framework</RootNamespace>
 		<OutputType>Library</OutputType>
 	</PropertyGroup>
-	<Import Project="../TakymLib.ProjectSettings.targets" />
+	<Import Project="../../TakymLib.ProjectSettings.targets" />
 	<PropertyGroup>
 		<Product>TakymLib.Core.Framework</Product>
 		<Description>The common core framework library.</Description>
