--- a/src/TakymLib.Core/TakymLib.Core.csproj
+++ b/src/TakymLib.Core/TakymLib.Core.csproj
@@ -11,7 +11,7 @@
 		<RootNamespace>TakymLib.Core</RootNamespace>
 		<OutputType>Library</OutputType>
 	</PropertyGroup>
-	<Import Project="../TakymLib.ProjectSettings.targets" />
+	<Import Project="../../TakymLib.ProjectSettings.targets" />
 	<PropertyGroup>
 		<Product>TakymLib.Core</Product>
 		<Description>The common core library.</Description>
