--- a/src/TakymLib.Threading.Distributed/TakymLib.Threading.Distributed.csproj
+++ b/src/TakymLib.Threading.Distributed/TakymLib.Threading.Distributed.csproj
@@ -11,7 +11,7 @@
 		<RootNamespace>TakymLib.Threading.Distributed</RootNamespace>
 		<OutputType>Library</OutputType>
 	</PropertyGroup>
-	<Import Project="../TakymLib.ProjectSettings.targets" />
+	<Import Project="../../TakymLib.ProjectSettings.targets" />
 	<PropertyGroup>
 		<Product>TakymLib.Threading.Distributed</Product>
 		<Description>The common distributed computing library.</Description>
