--- a/src/TakymLib/TakymLib.csproj
+++ b/src/TakymLib/TakymLib.csproj
@@ -11,7 +11,7 @@
 		<RootNamespace>TakymLib</RootNamespace>
 		<OutputType>Library</OutputType>
 	</PropertyGroup>
-	<Import Project="../TakymLib.ProjectSettings.targets" />
+	<Import Project="../../TakymLib.ProjectSettings.targets" />
 	<PropertyGroup>
 		<Product>TakymLib</Product>
 		<Description>The common library.</Description>
